# codtecs-attendance-system

./: .gitignore  Pipfile  README.md  next.config.ts  package-lock.json  package.json  vercel.json
python-part/: create_admin.py  desktop-app.py  pyproject.toml  requirements.txt
src/api/: index.py
src/app/: page.tsx
src/app/api/: README.md  index.py  requirements.txt  vercel.json
src/app/employee/: page.tsx
