[project]
name = "python-part"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.2.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.13.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyzbar>=0.1.9",
    "qrcode[pil]>=8.2",
    "uvicorn>=0.34.3",
]
